fixed white space on footer

--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -8,53 +8,53 @@
 		color: white;
 	}
 
-		ul {
-			display: -ms-grid;
-			display: grid;
-			grid-gap: 1em;
-			-ms-grid-columns: (1fr)[3];
-			grid-template-columns: repeat(3, 1fr);
-			-ms-grid-rows: (1fr)[2];
-			grid-template-rows: repeat(2, 1fr);
+	ul {
+		display: -ms-grid;
+		display: grid;
+		grid-gap: 1em;
+		-ms-grid-columns: (1fr)[3];
+		grid-template-columns: repeat(3, 1fr);
+		-ms-grid-rows: (1fr)[2];
+		grid-template-rows: repeat(2, 1fr);
 
-			padding: 1.6em 0;
+		padding: 1.6em 0;
 
-			li {
-				-ms-grid-column-align: center;
-				-webkit-justify-self: center;
-				-ms-justify-self: center;
-				justify-self: center;
-				margin: 0;
-				font-size: 14px;
-			}
+		li {
+			-ms-grid-column-align: center;
+			-webkit-justify-self: center;
+			-ms-justify-self: center;
+			justify-self: center;
+			margin: 0;
+			font-size: 14px;
+		}
 
-			.foot-info {
-				border-bottom: 2px solid rgba(255, 255, 255, 0);
-				padding-bottom: 5px;
-				-webkit-transition: border-bottom .2s ease-in-out; 
-				-moz-transition: border-bottom .2s ease-in-out;
-				transition: border-bottom .2s ease-in-out;
+		.foot-info {
+			border-bottom: 2px solid rgba(255, 255, 255, 0);
+			padding-bottom: 5px;
+			-webkit-transition: border-bottom .2s ease-in-out; 
+			-moz-transition: border-bottom .2s ease-in-out;
+			transition: border-bottom .2s ease-in-out;
 
-				&:hover {
-					border-bottom: 2px solid $seagreen;
-				}
-			}
-
-			.foot-icon {
-				padding-bottom: 5px;
-				-webkit-transition: color .2s ease-in-out;
-				-moz-transition: color .2s ease-in-out;
-				transition: color .2s ease-in-out; 
-
-				&:hover {
-					color: $seagreen;
-				}
+			&:hover {
+				border-bottom: 2px solid $seagreen;
 			}
 		}
+
+		.foot-icon {
+			padding-bottom: 5px;
+			-webkit-transition: color .2s ease-in-out;
+			-moz-transition: color .2s ease-in-out;
+			transition: color .2s ease-in-out; 
+
+			&:hover {
+				color: $seagreen;
+			}
+		}
+	}
 }
 
 span.black {
-  display: inline-block;
+  display: block;
 	width: 100%;
 	height: 30px;
 	background-color: #111;
